# My-Agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
configs/: agent_permissions.yaml  agents.yaml  context.yaml  evaluation.yaml  events.yaml  execution.yaml  hooks.yaml  mcp_servers.yaml  memory.yaml  rag.yaml  runtime.yaml  skills.yaml  tool_providers.yaml  workspace.yaml
docs/: agentscope_boundary.md  durable_execution.md  dynamic_tools.md  evaluation_benchmark.md  events_stream.md  hooks_lifecycle.md  loop_engineering.md  production_context.md  production_memory.md  workspace_sandbox.md
prompts/: aftersales_agent.md  base_system.md  data_agent.md  knowledge_agent.md  product_agent.md
skills/chart-report/: SKILL.md  manifest.yaml
skills/citation-answer/: SKILL.md  manifest.yaml
skills/data-analysis/: SKILL.md  manifest.yaml
skills/policy-check/: SKILL.md  manifest.yaml
skills/product-copywriting/: SKILL.md  manifest.yaml
src/agents/: profiles.py  subagents.py
src/api/: app.py  deps.py
src/context/: business_context_extractor.py  caller_context.py  context_budget.py  context_compactor.py  context_pack.py  context_summary.py  context_window.py  file_context_loader.py  manager.py  rag_context_loader.py  tool_observation_context.py
src/core/: errors.py  models.py  settings.py
src/events/: sse.py  (+5 more)
tests/: test_dynamic_tool_pack.py  test_layers_v41.py  test_loop_product.py  test_memory_manager.py  test_permission_engine.py  test_v42_infra_layers.py
verification/: assertions.py  replay.py  run_verification.py
(+130 files in other folders)
