[project]
name = "ecom-agent-platform-v3"
version = "0.3.0"
description = "Enterprise ecommerce AgentScope based multi-agent loop platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]
agentscope = ["agentscope"]
langgraph = ["langgraph"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
